# searchmark-api

./: .env.example  .envrc.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.local.yml  compose.production.yml  docker-compose.yml  justfile  model-comparison.md  pyproject.toml
.claude/: settings.local.json
.envs/.local/: .postgres
.github/: dependabot.yml
.github/workflows/: main.yml  pre-commit-autoupdate.yml
app/: cache.py  cli.py  main.py  parsers.py  prompts.py
app/schemas/: analyze.py
app/testing/: __init__.py  core.py  parsers.py  runner.py  schemas.py
app/testing/fixtures/: sample_bookmarks.html  sample_bookmarks.json  test_suite.json
compose/local/fastapi/: Dockerfile
compose/production/fastapi/: Dockerfile
compose/production/postgres/: Dockerfile
compose/production/postgres/maintenance/: backup  backups  restore  rmbackup
compose/production/postgres/maintenance/_sourced/: messages.sh
scripts/: deploy.ch
tests/: test_api.py  test_bookmark_parsers.py  test_cache.py  test_foo.py  test_parsers.py  test_schemas.py
